[GTP-254] Made print translation global

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -406,6 +406,8 @@ en:
   place_plural: 'places'
   region: 'region'
   region_plural: 'regions'
+  # global utilities translations
+  print: 'print page'
   # global generic translations
   view_all: 'view all'
   all: 'all'
@@ -739,7 +741,6 @@ en:
         in: 'In:'
       footer:
         up_to: 'Up to:'
-        print: 'print page'
     dissolution_message:
       description_text: 'There are currently no MPs because Parliament has been dissolved before the general election on 8 June.'
       description_link: 'Find your constituency'
