Fixed spelling error on answered by

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -461,9 +461,9 @@ en:
       question: 'question'
       question_for: 'question for'
       asked_on: 'asked on'
-      answered_on: 'aswered on'
+      answered_on: 'answered on'
       by: 'by'
-      
+
   # people translations
   people:
     index:
