[WEBSITE-2289] Unanswered Questions * Added tests for unanswered questions in controller and view * Changed to banner for unanswered questions * Updated questions controller * Updated questions show page * Added AnswerHelper to deal with adding classes to href links in html strings * Added tests for AnswerHelper * Added test to questions show spec to check output for Member of the House of Lords and MP

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -457,12 +457,13 @@ en:
       answer: 'answer'
       answer_expected_from: 'answer expected from the'
       mp_for: 'MP for'
-      not_answered: 'not yet answered'
+      not_answered: 'not yet answered.'
       question: 'question'
       for: 'for'
       asked_on: 'asked on'
       answered_on: 'answered on'
       by: 'by'
+      member_of: 'member of the'
 
   # people translations
   people:
