--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -457,11 +457,12 @@ en:
       answer: 'answer'
       answer_expected_from: 'answer expected from the'
       mp_for: 'MP for'
-      not_answered: 'not yet answered'
+      not_answered: 'not yet answered.'
       question: 'question'
       for: 'for'
       asked_on: 'asked on'
       answered_on: 'answered on'
+      question_for: 'question for'
       by: 'by'
 
   # people translations
