[Fix] Correct tests to compare full month name to rendered views
* Update _constituency partial tests
* Update translation file to defaultly use full month names when formatting time

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -442,9 +442,7 @@ en:
   # global time format translations
   time:
     formats:
-      default: '%-d %b %Y'
-  date:
-    abbr_month_names: ['', 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
+      default: '%-d %B %Y'
   # global error message translations
   error:
     no_constituency: "we couldn't find the postcode you entered."
