[RELEASE/WEBDEV-587] Pugin version bump; Update toggles and tracks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -432,6 +432,14 @@ en:
   find_results: 'Find results from current parliament.uk websites.'
   does_not_search_beta: "This search doesn't search beta.parliament.uk"
   open_new_window: "website opens in a new window"
+  # global dropdown translations
+  dropdown:
+    item: 'item'
+    next_item: 'next-item'
+    previous_item: 'previous-item'
+    parent_item: 'parent-item'
+    content: 'content'
+    open: 'open'
   # global a-z navigation translations
   a_to_z:
     a_to_z: 'A to Z'
