--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -540,6 +540,7 @@ en:
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
       link_to_original: 'This is our beta website, pages are being tested and improved. You can view %{link} on the current website.'
       link_to_original_version: 'a version of this page'
+      associations: 'associations'
     image:
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
