--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -608,10 +608,10 @@ en:
       title: 'official portrait of'
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
-      license: 'This photo, and all related crops, are released under an %{link} license.'
-      license_link: 'Attribution 3.0 Unported (CC BY 3.0)'
-      license_context: 'This means that you can use, share and adapt it, as long as you give proper attribution, provide a link to the license, and indicate if changes were made to the image. See the %{link} for more details.'
-      license_context_link: 'full license'
+      licence: 'This photo, and all related crops, are released under an %{link} licence.'
+      licence_link: 'Attribution 3.0 Unported (CC BY 3.0)'
+      licence_context: 'This means that you can use, share and adapt it, as long as you give proper attribution, provide a link to the licence, and indicate if changes were made to the image. See the %{link} for more details.'
+      licence_context_link: 'full licence'
       portraits_heading: 'Cropped portraits'
       download_jpeg: 'download jpeg'
       download_original: 'download original'
