[CTEWEB-494] Add petition templates and start and end dates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -223,11 +223,11 @@ en:
       after_sending_petition_d: 'We’ll also send your petition to the Department for Transport (DfT). They can challenge it if they don’t believe you are affected by the Bill.'
       after_sending_petition_e: 'You will usually be invited to give evidence to the committee about your petition. Hearings are scheduled for autumn 2019.'
       # petition templates
-      template_online: 'HS2-Phase-2a-Additional-Provision-2-Petition-Template-Online.doc'
-      template_offline_ind: 'HS2-Phase-2a-Additional-Provision-2-Petition-Pack-Individuals.doc'
-      template_offline_grpind: 'HS2-Phase-2a-Additional-Provision-2-Petition-Pack-Group-Of-Individuals.doc'
-      template_offline_org: 'HS2-Phase-2a-Additional-Provision-2-Petition-Pack-Organisation.doc'
-      template_offline_grporg: 'HS2-Phase-2a-Additional-Provision-2-Petition-Pack-Group-Of-Organisations.doc'
+      template_online: 'HS2-Phase-2a-Petition-Template-Online-Lords.docx'
+      template_offline_ind: 'HS2-Phase-2a-Petition-Pack-Individuals-Lords.docx'
+      template_offline_grpind: 'HS2-Phase-2a-Petition-Pack-Group-Of-Individuals-Lords.docx'
+      template_offline_org: 'HS2-Phase-2a-Petition-Pack-Organisation-Lords.docx'
+      template_offline_grporg: 'HS2-Phase-2a-Petition-Pack-Group-Of-Organisations-Lords.docx'
       # petition submission confirmation
       what_next_a: 'We’ll email you within 14 days about how to pay the £20 admin fee.'
       what_next_b: 'We’ll publish your petition on our website. This will include your name and address.'
@@ -235,8 +235,8 @@ en:
       what_next_d: 'We’ll also send your petition to the Department for Transport (DfT). They can challenge it if they don’t believe you are affected by the Bill.'
       what_next_e: 'You will usually be invited to give evidence to the committee about your petition. Hearings are scheduled for autumn 2019.'
       # petition status
-      petition_status_pre: 'You can object from 11am on Friday 14 June 2019.'
-      petition_status_active: 'The deadline for objections is 1pm on Friday 15 March 2019.'
+      petition_status_pre: 'You can object from 11am on Wednesday 17 July 2019.'
+      petition_status_active: 'The deadline for objections is 1pm on Friday 16 August 2019.'
       petition_status_post: 'The deadline has passed.'
     # Global hybrid bills translations
     hs2: 'High Speed Rail (West Midlands to Crewe)'
