--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -390,7 +390,7 @@ en:
       personal_info_j: 'after the petition has been received by the Private Bill Office'
       personal_info_k: 'We will publish your petition on UK Parliament’s website. This will include your name and address.'
       personal_info_l: 'The personal information you have provided may be kept in a database by Private Bill Offices in both houses.'
-      personal_info_m: 'To find out more, read the <a href="https://www.parliament.uk/documents/foi/House-of-Lords-FOI/HL">House of Lords privacy notice</a>.'
+      personal_info_m: 'To find out more, read the <a href="https://www.parliament.uk/documents/foi/House-of-Lords-FOI/HL%20Privacy%20Notice%20for%20Members%20of%20the%20Public%20v1.0.pdf">House of Lords privacy notice</a>.'
       comms: 'communications'
       comms_a: 'Private Bill Office staff may call or email any of the people named in the petition to verify the information provided.'
       comms_b: 'Communications may be stored in databases to keep track of information you have given or received. This information may be shared between the Private Bill Offices.'
